I have added the field for filtering and have lifted up server

--- a/src/index.html
+++ b/src/index.html
@@ -64,5 +64,31 @@
     </tr>
     </tbody>
 </table>
+<figure>
+    <figcaption>Search your event</figcaption>
+        <form>
+            <label for="text">
+                <span>Text</span>
+                <input type="checkbox" checked id="text">
+            </label>
+            <label for="date">
+                <span>Date</span>
+                <input type="checkbox" id="date">
+            </label>
+            <label for="status">
+                <span>Status</span>
+                <input type="checkbox" id="status">
+            </label>
+            <label for="tag">
+                <span>Tag</span>
+                <input type="checkbox" id="tag">
+            </label>
+            <label>
+                <input type="text" placeholder="Type your text">
+                <button type="submit">PUSH</button>
+            </label>
+        </form>
+</figure>
+
 </body>
 </html>
