--- a/src/index.html
+++ b/src/index.html
@@ -1,94 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The calendar of tasks</title>
-</head>
-<body>
-<h1>The calendar of tasks</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
-        <th>Sunday</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-        <td>13</td>
-        <td>14</td>
-    </tr>
-    <tr>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-    </tr>
-    <tr>
-        <td>22</td>
-        <td>23</td>
-        <td>24</td>
-        <td>26</td>
-        <td>27</td>
-        <td>28</td>
-        <td>29</td>
-    </tr>
-    <tr>
-        <td>30</td>
-        <td>31</td>
-    </tr>
-    </tbody>
-</table>
-<figure>
-    <figcaption>Search your event</figcaption>
-        <form>
-            <label for="text">
-                <span>Text</span>
-                <input type="checkbox" checked id="text">
-            </label>
-            <label for="date">
-                <span>Date</span>
-                <input type="checkbox" id="date">
-            </label>
-            <label for="status">
-                <span>Status</span>
-                <input type="checkbox" id="status">
-            </label>
-            <label for="tag">
-                <span>Tag</span>
-                <input type="checkbox" id="tag">
-            </label>
-            <label>
-                <input type="text" placeholder="Type your text">
-                <button type="submit">PUSH</button>
-            </label>
-        </form>
-</figure>
-
-</body>
+  </head>
+  <body></body>
 </html>
